DW_UO_Handler update.